5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4002/executions/1791_1601.log
== TEST (2019-05-29 14:07:56) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
e = min(vet1[i])
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:07:59) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
e = min(vet1[i])
print(e)
-- EXECUTION TIME:
0.510364
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1601/main.py", line 5, in <module>
    e = min(vet1[i])
TypeError: 'numpy.float64' object is not iterable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:08:01) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
e = min(vet1[i])
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:08:02) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
e = min(vet1[i])
print(e)
-- EXECUTION TIME:
0.425641
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1601/main.py", line 5, in <module>
    e = min(vet1[i])
TypeError: 'numpy.float64' object is not iterable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:08:25) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
e = max(vet1[i])
print(e)
-- EXECUTION TIME:
0.39931
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1601/main.py", line 5, in <module>
    e = max(vet1[i])
TypeError: 'numpy.float64' object is not iterable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:08:26) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
e = max(vet1[i])
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:14:48) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Tempo de chegada dos corredores: ")))
e = max(vet1[i])
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:14:49) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Tempo de chegada dos corredores: ")))
e = max(vet1[i])
print(e)
-- EXECUTION TIME:
0.550696
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1601/main.py", line 4, in <module>
    e = max(vet1[i])
NameError: name 'i' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:14:51) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Tempo de chegada dos corredores: ")))
e = max(vet1[i])
print(e)
-- EXECUTION TIME:
0.668303
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1601/main.py", line 4, in <module>
    e = max(vet1[i])
NameError: name 'i' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:14:51) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Tempo de chegada dos corredores: ")))
e = max(vet1[i])
print(e)
-- EXECUTION TIME:
1.11503
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1601/main.py", line 4, in <module>
    e = max(vet1[i])
NameError: name 'i' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:16:12) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Tempo de chegada dos corredores: ")))
e = min(vet1[i])
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:16:14) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Tempo de chegada dos corredores: ")))
e = min(vet1[i])
print(e)
-- EXECUTION TIME:
0.383531
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1601/main.py", line 4, in <module>
    e = min(vet1[i])
NameError: name 'i' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:16:15) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Tempo de chegada dos corredores: ")))
e = min(vet1[i])
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:16:15) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Tempo de chegada dos corredores: ")))
e = min(vet1[i])
print(e)
-- EXECUTION TIME:
0.107978
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1791/1601/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:17:00) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Tempo de chegada dos corredores: ")))
e = min(vet1)
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:17:00) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Tempo de chegada dos corredores: ")))
e = min(vet1)
print(e)
-- EXECUTION TIME:
0.447806
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
3
---- user output:
10.0
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
0
---- user output:
32.0
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
2
---- user output:
Tempo de chegada dos corredores: 1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:18:11) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
vet1[i] = min(vet1)
print(vet1[i])
-- EXECUTION TIME:
0.439849
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
3
---- user output:
10.0
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
0
---- user output:
32.0
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
2
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:18:11) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
vet1[i] = min(vet1)
print(vet1[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:18:21) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
vet1[i] = min(vet1)
print(vet1[i])
-- EXECUTION TIME:
0.502148
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
3
---- user output:
10.0
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
0
---- user output:
32.0
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
2
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:18:24) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
vet1[i] = min(vet1)
print(vet1[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:19:00) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
vet1[i] = min(vet1)
j = i
print(vet1[i])
-- EXECUTION TIME:
0.375305
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
3
---- user output:
10.0
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
0
---- user output:
32.0
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
2
---- user output:
10.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:19:00) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
vet1[i] = min(vet1)
j = i
print(vet1[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:19:02) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
vet1[i] = min(vet1)
j = i
print(vet1[i])
-- EXECUTION TIME:
0.477727
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
3
---- user output:
10.0
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
0
---- user output:
Tempo de chegada dos corredores: 32.0
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
2
---- user output:
Tempo de chegada dos corredores: 1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:21:35) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Tempo de chegada dos corredores: ")))
i = min(vet1)

print(vet1[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:21:35) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Tempo de chegada dos corredores: ")))
i = min(vet1)

print(vet1[i])
-- EXECUTION TIME:
0.373611
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1601/main.py", line 6, in <module>
    print(vet1[i])
IndexError: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:27:04) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Tempo de chegada dos corredores: ")))
i = min(vet1)
j = i
print(vet1[j])
-- EXECUTION TIME:
0.504352
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1601/main.py", line 6, in <module>
    print(vet1[j])
IndexError: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:27:06) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Tempo de chegada dos corredores: ")))
i = min(vet1)
j = i
print(vet1[j])
-- EXECUTION TIME:
0.393624
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1601/main.py", line 6, in <module>
    print(vet1[j])
IndexError: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:27:08) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Tempo de chegada dos corredores: ")))
i = min(vet1)
j = i
print(vet1[j])
-- EXECUTION TIME:
0.331704
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1601/main.py", line 6, in <module>
    print(vet1[j])
IndexError: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:27:08) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Tempo de chegada dos corredores: ")))
i = min(vet1)
j = i
print(vet1[j])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:35:07) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Tempo de chegada dos corredores: ")))
i = min(vet1)
j = i
print(vet1[j])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
